--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,16 @@
 {
   "manifest_version": 3,
   "name": "Telegram Bot Extractor",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Extracts Telegram Bot links, tokens, and chat IDs from the current page.",
   "permissions": [
     "activeTab",
     "scripting",
-    "clipboardWrite"
+    "clipboardWrite",
+    "webRequest"
+  ],
+  "host_permissions": [
+    "*://api.telegram.org/*"
   ],
   "action": {
     "default_popup": "popup.html",
@@ -15,6 +19,12 @@
       "48": "images/icon48.png",
       "128": "images/icon128.png"
     }
+  },
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'none'"
   },
   "icons": {
     "16": "images/icon16.png",
